[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/interface/progress_bar.gd" type="Script" id=1]
[ext_resource path="res://assets/interface/empty_bar.png" type="Texture" id=2]

[node name="BarTemplate" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -96.0
margin_right = -192.0
margin_bottom = -96.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BarBackground" type="TextureRect" parent="."]
margin_right = 39.0
margin_bottom = 9.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBarBackground" type="TextureProgress" parent="BarBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.5
margin_top = -1.5
margin_right = 14.5
margin_bottom = 1.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="TextureProgress" parent="BarBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -14.5
margin_top = -1.5
margin_right = 14.5
margin_bottom = 1.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
